# polymarket-arbitrage-bot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  Update.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: lint.yml
data/: svb_v1.jsonl
scripts/: repro_table2.sh
src/: index.ts
src/config/: client.ts  index.ts  loadEnv.ts
src/constant/: index.ts
src/strategy/: arbitrage.ts
src/types/: index.ts
svb/: __init__.py  cli.py  loader.py  runner.py  schema.py  scorer.py
svb/models/: __init__.py  base.py  llava.py  openai_api.py  qwen2_vl.py
tests/: test_scorer.py
